--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.7.0",
+    "react-hotkeys": "^2.0.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "typescript": "^4.5.3",
