--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.37",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-flow-renderer": "^9.7.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.17",
+    "@types/react-dom": "^18.2.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-flow-renderer": "^10.3.17",
     "react-hotkeys": "^2.0.0",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^8.1.0",
-    "typescript": "^4.5.3",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
+    "typescript": "^5.1.6",
+    "uuid": "^9.0.0",
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
